--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
+    "react-whatsapp-button": "^2.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "typewriter-effect": "^2.21.0"
