--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.0.3",
+    "@emailjs/browser": "^3.11.0",
     "@types/react-typist": "^2.0.6",
+    "axios": "^1.6.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
