--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "react-whatsapp-button": "^2.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
