--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@hookform/resolvers": "^3.3.4",
     "@types/react-typist": "^2.0.6",
-    "axios": "^1.6.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "react-whatsapp-button": "^2.0.0",
     "slick-carousel": "^1.8.1",
+    "sonner": "^1.3.1",
     "styled-components": "^6.1.1",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
